# goit-ds-hw-03

./: authors.json  pyproject.toml  quotes.json
task1/: db_features.py  main.py
task2/: db_upload.py  main.py
