[tool.poetry]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = ["Oleksii <alex29.06.05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.9.1"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
